--- a/assets/front_assets/css/account.css
+++ b/assets/front_assets/css/account.css
@@ -1,5 +1,6 @@
 /* My Account area end */
-.services_slider .slick-list a{
+
+.services_slider .slick-list a {
     text-decoration: none;
     font-size: 15px;
     font-weight: 400;
@@ -7,9 +8,12 @@
     line-height: 28px;
 }
 
-/*.content-page {margin: 50px;}*/
-.content-page h3{margin-bottom: 34px;}
 
+/*.content-page {margin: 50px;}*/
+
+.content-page h3 {
+    margin-bottom: 34px;
+}
 
 .inner_box {
     padding: 45px 0px 40px 0px;
@@ -17,10 +21,12 @@
     background: #f0f0f0;
     border: 1px solid #3333330a;
 }
+
 .inner_box img {
     display: block;
     margin: 0 auto 20px;
 }
+
 .style_div h4 {
     position: relative;
     color: #545454;
@@ -29,20 +35,27 @@
     font-weight: 700;
     padding-top: 8px;
 }
-.inner_box:hover h4, .inner_box:hover p, .inner_box:hover .text-muted {
+
+.inner_box:hover h4,
+.inner_box:hover p,
+.inner_box:hover .text-muted {
     color: #fff;
 }
+
 .inner_box:hover .hide {
     display: block !important;
 }
+
 .inner_box:hover .hvr_none {
     display: none !important;
 }
+
 .inner_box .box {
     text-align: center;
     margin: 0 auto;
     font-size: 40px;
 }
+
 .myaccount-sidebar ul>li.active a {
     color: white;
 }
@@ -51,7 +64,7 @@ section.accountSec {
     margin: 28px;
 }
 
-.accountSec{
+.accountSec {
     margin-top: 50px;
 }
 
@@ -61,26 +74,31 @@ section.accountSec {
     border-color: transparent;
     font-weight: bold;
 }
-.myaccount-sidebar li > a{color: black}
+
+.myaccount-sidebar li>a {
+    color: black
+}
 
 .main_heading.heading_two.text-center {
     color: white;
 }
-.desktopGrid .col-sm-4{
-    background-color:red;
+
+.desktopGrid .col-sm-4 {
+    background-color: red;
 }
+
 
 /* My Account area end */
 
 
 /* Wahaj  */
 
-
 .WapplastSection {
     background-color: #ff0000;
     color: white;
     font-size: 34px;
 }
+
 
 /* .primary-btn.green-btn {
     padding: 10px;
@@ -96,6 +114,7 @@ section.accountSec {
 .WappHeading {
     font-size: 50px;
 }
+
 .WappIosPara {
     font-size: 36px;
     font-weight: 600;
@@ -103,7 +122,7 @@ section.accountSec {
 }
 
 .WappSaperator {
-    bottom : 76px;
+    bottom: 76px;
 }
 
 .WappheadingBox {
@@ -118,9 +137,11 @@ section.accountSec {
 .WappBannerImage0 .flexBOxC .txt h1:nth-child(1) {
     font-size: 4em !important;
 }
+
 .WappBannerImage0 .flexBOxC .txt h1:nth-child(2) {
     font-size: 3em !important;
 }
+
 .WappBannerImage0 .flexBOxC .txt h1:nth-child(3) {
     font-size: 8em !important;
 }
@@ -132,7 +153,7 @@ section.accountSec {
     font-weight: bold;
 }
 
-.colorBlack, 
+.colorBlack,
 .colorBlack p {
     color: #000;
 }
@@ -144,6 +165,8 @@ section.accountSec {
     align-content: center;
     justify-content: center;
 } */
+
+
 /* .dgrid > *+* {
     margin-left: 5rem;
 } */
@@ -163,17 +186,21 @@ section.accountSec {
     align-items: center;
     justify-content: center;
 }
-.dItem img{
-    height: 70px;width: 50%;
+
+.dItem img {
+    height: 70px;
+    width: 50%;
 }
-.arrJus{
-    justify-content:space-around;
+
+.arrJus {
+    justify-content: space-around;
 }
+
 .dItem h5 {
     font-size: 16px;
     font-weight: 800;
     /* padding-top: 12px; */
-    margin: 1.5rem 0 0 0 ;
+    margin: 1.5rem 0 0 0;
 }
 
 .dcol {
@@ -183,15 +210,14 @@ section.accountSec {
 }
 
 .ecomm h5 {
-    
     font-weight: bold;
 }
 
-.mvpsec3 ul > li {
+.mvpsec3 ul>li {
     font-weight: bold;
 }
 
-.digitalMSection4  h4 {
+.digitalMSection4 h4 {
     font-weight: bold;
     color: #0e166e;
     font-size: 35px;
@@ -216,66 +242,69 @@ section.accountSec {
     color: #d52123;
     margin-top: 5px;
 }
+
+
+/* case stydy */
+
 @media screen and (max-width: 414px) {
-    .graphicDes.Comp.WappBannerImage0 .WappBannerimg{
+    .graphicDes.Comp.WappBannerImage0 .WappBannerimg {
         width: 62% !important;
     }
 }
 
-@media screen and (max-width: 540px){
+@media screen and (max-width: 540px) {
     .Wappcontent {
         font-size: 3rem;
-    }    
-}
-
-
-
-@media screen and (max-width: 1024px){
-    .WappHeading {
-            font-size: 45px;
-        }
-    .WappCardSection {
-            margin-bottom: 0px;
-        }
-    .WappBannerImage0 .graphicDes.Comp .flexBOxC figure {
-            top: -13%
     }
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 1024px) {
+    .WappHeading {
+        font-size: 45px;
+    }
+    .WappCardSection {
+        margin-bottom: 0px;
+    }
+    .WappBannerImage0 .graphicDes.Comp .flexBOxC figure {
+        top: -13%
+    }
+}
+
+@media screen and (max-width: 768px) {
     .graphicDes.Comp.WappBannerImage0 .WappBannerimg {
         width: 48% !important;
         top: 0% !important;
     }
-   .WappBannerImage0 .flexBOxC figure {
+    .WappBannerImage0 .flexBOxC figure {
         top: -140px
-   }
-   .dbtu{
-       flex-wrap: wrap;
-       justify-content:space-around !important
-   }
-   .dItem {
-    height: 220px;
-    width: 247px;
+    }
+    .dbtu {
+        flex-wrap: wrap;
+        justify-content: space-around !important
+    }
+    .dItem {
+        height: 220px;
+        width: 247px;
     }
 }
 
 @media screen and (max-width: 600px) {
     .Wapplast {
-    margin-top: -61px;
-    margin-bottom: 29px;
+        margin-top: -61px;
+        margin-bottom: 29px;
     }
     .graphicDes.Comp.WappBanner .flexBOxC figure {
         width: 60% !important;
         top: 17rem !important;
     }
 }
-@media screen and (max-width: 540px){
-.graphicDes.Comp.WappBannerImage0 .flexBOxC figure {
-    top: 18rem !important;
-}
-.dItem {
-    height: 220px;
-    width: 220px;
-}
+
+@media screen and (max-width: 540px) {
+    .graphicDes.Comp.WappBannerImage0 .flexBOxC figure {
+        top: 18rem !important;
+    }
+    .dItem {
+        height: 220px;
+        width: 220px;
+    }
 }
